<resources>
    <string name="app_name">AppMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Iniciar Sesión</string>
    <string name="help_email">Ingrese su correo</string>
    <string name="help_password">Contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="remember_account">Recordar mi cuenta</string>
    <string name="create_account">Crear cuenta</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="terms">Nuestras políticas de privacidad, términos y condiciones</string>
    <string name="register_crear_cuenta">Crear Cuenta</string>
    <string name="register_nombres">Nombres</string>
    <string name="register_apellidos">Apellidos</string>
    <string name="register_correo">Correo electrónico</string>
    <string name="register_celular">Número celular</string>
    <string name="register_numero_documento">Número de documento</string>
    <string name="register_clave">Contraseña</string>
    <string name="Aceptar" />
    <string name="no_autorizado_aceptar">Aceptar</string>
    <string name="product_detail_add">Agregar</string>
    <string name="total">TOTAL A PAGAR</string>
    <string name="currency">S/.</string>
    <string name="mis_compras_check_out">Check Out</string>
    <string name="item_cart_cant">Cantidad:</string>
    <string name="item_cart_total_cant">Total: </string>
    <string name="edit_product_dialog_cantidad">Cantidad</string>
    <string name="edit_product_dialog_total">Total :</string>
    <string name="update">ACTUALIZAR</string>
    <string name="message_dialog_accept">ACEPTAR</string>
</resources>