<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/background">

        <TextView
            android:id="@+id/tvHeaderProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Producto"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imgDialog"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:srcCompat="@drawable/template_product" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_product_dialog_cantidad"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imgDialog"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/tvCantDialog"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/imgLessDialog"
        app:layout_constraintStart_toEndOf="@+id/imgLessDialog"
        app:layout_constraintTop_toTopOf="@+id/imgLessDialog"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgPlusDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgLessDialog"
        app:layout_constraintStart_toEndOf="@+id/tvCantDialog"
        app:layout_constraintTop_toTopOf="@+id/imgLessDialog"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_add_plus" />

    <ImageView
        android:id="@+id/imgLessDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/imgDialog"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/icon_add_less" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_product_dialog_total"
        app:layout_constraintStart_toEndOf="@+id/imgDialog"
        app:layout_constraintTop_toBottomOf="@+id/imgLessDialog" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/currency"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/tvTotalDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update"
        android:backgroundTint="@color/background"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDialog" />
</androidx.constraintlayout.widget.ConstraintLayout>